--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learning to be a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Sonora, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to play golf, and hike.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A job that utilizes full stack software engineering skills.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Diego, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To learn tools that can be utilized in a fulfilling career.</p>
     </section>
 
     <footer id="footer">
